<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <!-- Top App Bar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/dark_blue"
        android:textAlignment="textStart"
        android:title="@string/health_app"
        android:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/HealthApp"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />



    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health_app_dashboard"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:id="@+id/health_dashboard"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Weight Section -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_blue"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/weight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_50_0_kg"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Height Section -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_blue"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/height" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_116_0_cm"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- BMI Section -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_blue"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/bmi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_19_23_bmi"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/health_dashboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            android:id="@+id/activityButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_blue"
            android:text="Activity"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    <Button
        android:id="@+id/dietPlanButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/dark_green"
        android:text="@string/diet_plan"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="477dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/buttons_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Water Goal"
                    android:textColor="@color/black"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:paddingStart="12dp"
                    android:paddingTop="5dp"

                    />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0.0L"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="25dp"
                    android:padding="10dp"/>

                <Button
                    android:id="@+id/button7"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:text="Set Goal"
                    android:textSize="21dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="200dp"
                    android:backgroundTint="@color/dark_green"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sleep Tracker"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:paddingStart="12dp"
                    android:paddingTop="5dp"/>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0.0 hr"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="25dp"
                    android:padding="10dp"/>

                <Button
                    android:id="@+id/button8"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:text="Set Goal"
                    android:textSize="21dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="200dp"
                    android:backgroundTint="@color/dark_green"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Walking Goal"
                    android:textColor="@color/black"
                    android:textSize="22dp"
                    android:paddingStart="12dp"
                    android:textStyle="bold"
                    android:paddingTop="5dp"/>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0 Steps"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:padding="10dp"
                    android:textAlignment="center"
                    />
                <Button
                    android:id="@+id/button9"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:text="Set Goal"
                    android:textSize="21dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="200dp"
                    android:backgroundTint="@color/dark_green"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ImageView
            android:id="@+id/nursingho"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="150dp"
            android:src="@drawable/nursinghome" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
